@@ -49,7 +49,7 @@ html.tag.strong=""
 html.tag.style=",media,type,"
 html.tag.sub=""
 html.tag.sup=""
-html.tag.table=",align[:left:center:right:],background,border,bgcolor,cellpadding,cellspacing,frame[:void:above:below:hsides:ihs:rhs:vsides:box:border:],rules[:none:groups:rows:cols:all:],summary,width,"
+html.tag.table=",align[:left:center:right:],background,border,bgcolor,cellpadding,cellspacing,frame[:void:above:below:hsides:ihs:rhs:vsides:box:border:],rules[:none:groups:rows:cols:all:],summary,width,height,"
 html.tag.tbody=",align[:left:center:right:justify:char:],char,charoff,valign[:top:middle:bottom:baseline:],"
 html.tag.td=",abbr,align[:left:center:right:justify:char:],axis,background,bgcolor,char,charoff,colspan[],headers,height,nowrap[nowrap],rowspan[],scope[:row:col:rowgroup:colgroup:],valign[:top:middle:bottom:baseline:],width,"
 html.tag.textarea=",cols[],disabled[disabled],name,readonly[readonly],rows[],tabindex[],"
@@ -204,7 +204,7 @@ html.style.z-index="0"
 
 # CSS combi-map
 
-html.style.combimap.background="uNc,scroll,fixed,transparent,top,bottom,center,left,right,repeat,repeat-x,repeat-y,no-repeat,"
+html.style.combimap.background="uNc,scroll,fixed,transparent,top,bottom,center,left,right,repeat,repeat-x,repeat-y,no-repeat,radial-gradient,"
 html.style.combimap.border="Nc,transparent,none,hidden,dotted,dashed,solid,double,groove,ridge,inset,outset,separate,collapse,"
 html.style.combimap.border-bottom="nc,transparent,none,hidden,dotted,dashed,solid,double,groove,ridge,inset,outset,"
 html.style.combimap.border-left="nc,transparent,none,hidden,dotted,dashed,solid,double,groove,ridge,inset,outset,"
